# cnc-server

./: Cargo.toml
docker/: Dockerfile
src/: client_config.rs  main.rs  options.rs  result.rs  router.rs
src/cnc/: client.rs  commands.rs  handler.rs  mod.rs  state.rs  updates.rs
src/cnc/protocol/: mod.rs  recv.rs  send.rs  ssh.rs
src/endpoints/: config.rs  connect_ws.rs  give_client.rs  mod.rs  not_found.rs  post_ngc_file.rs  serve_static.rs  upgrade.rs  websocket.rs  websocketerror.rs
